maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:7: error: not found: value choix
      choix()
      ^Escaper:14: error: not found: value choix
    choix()
    ^Escaper:43: error: not found: value virages
    virages=virages-1
    ^Escaper:51: error: not found: value virages
    virages=virages+1
    ^Escaper:56: error: not found: value virages
    virages=virages+1
    ^